Styling without affecting flexbox

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -11,6 +11,12 @@
     <header>
         <ul><li>List of hobbies</li></ul>
         <a href="tweets.html" target="_blank">link to tweetshtml</a>
+    
+    <ul>
+        <li class="logo">★</li>  <!-- Unicode logo -->
+        <li><a href="/">Home</a></li>
+        <li><a href="/tweets">Tweets</a></li>
+    </ul>
     </header>
     <main>
         <article>Tweet CSS</article>
